# BookMyShow-ticket-notifier-telegram-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  update_play_store_version.sh
db/: README.emptydir
src/: bms_helper.rs  db_helper.rs  main.rs  notification_controller.rs  telegram_helper.rs  utils.rs
